[package]
name = "workspaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["chrono"] }
users = "0.11.0"
