[package]
name = "workspaces"
description = "A tool for managing ephemeral data"
authors = ["Marko van Treeck"]
version = "0.3.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
libsqlite3-sys = "0.26.0"
prettytable-rs = "0.10.0"
rusqlite = { version = "0.29.0", features = ["chrono"] }
serde = { version = "1.0.162", features = ["derive"] }
toml = "0.7.3"
users = "0.11.0"
